# nap

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml
.github/workflows/: test.yml
nap/: __init__.py  cli.py  environment.py  llm.py  memory.py  report.py
nap/preprocessing/: eeg.py  scanner.py
nap/skills/: base.py  eeg_artifact_rejection.py  inspect_raw.py  organize_data.py
nap/templates/: report.html
tests/: test_cli.py  test_environment.py  test_report.py  test_scanner.py
