[project]
name = "nap-neuro"
version = "0.1.0"
description = "Neuroimaging Agentic Processing Platform"
requires-python = ">=3.10"
dependencies = [
    "mne>=1.6",
    "matplotlib>=3.7",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
nap = "nap.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
